A lot of updates related to sources
